--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -43,7 +43,6 @@ AUTOCONF = .\configure.txt
 #WITH_MSCNG=0
 #WITH_LIBXSLT=1
 #STATIC = 0
-#WITH_DL = 1
 #WERROR = 0
 #PEDANTIC = 1
 #PREFIX = . # set this to the right value.
@@ -60,10 +59,10 @@ AUTOCONF = .\configure.txt
 #
 # Names of various input and output components.
 #
-!if "$(WITH_DL)" == "1"
-APP_NAME 		= xmlsec.exe
-!else
+!if "$(STATIC)" == "1"
 APP_NAME 		= xmlseca.exe
+!else
+APP_NAME 		= xmlsec.exe
 !endif
 APP_NAME_MANIFEST	= $(APP_NAME).manifest
 
@@ -449,14 +448,14 @@ CFLAGS = $(CFLAGS) /DXMLSEC_NO_XSLT=1
 !endif
 
 CFLAGS = $(CFLAGS) /D "XMLSEC_DEFAULT_CRYPTO=\"$(XMLSEC_DEFAULT_CRYPTO)\""
-!if "$(WITH_DL)" == "1"
-CFLAGS = $(CFLAGS) /D "XMLSEC_DL_WIN32"
-APP_CFLAGS = $(APP_CFLAGS) /D "XMLSEC_CRYPTO_DYNAMIC_LOADING"
-!else
+!if "$(STATIC)" == "1"
 CFLAGS 	= $(CFLAGS) /D "XMLSEC_NO_CRYPTO_DYNAMIC_LOADING"
 APP_CFLAGS = $(APP_CFLAGS) $(XMLSEC_CRYPTO_CFLAGS)
 # this disables TEMPLATE tests and helps with missing algorithms (hmac) in mscrypto
 APP_CFLAGS = $(APP_CFLAGS) /D "XMLSEC_NO_TMPL_TEST"
+!else
+CFLAGS = $(CFLAGS) /D "XMLSEC_DL_WIN32"
+APP_CFLAGS = $(APP_CFLAGS) /D "XMLSEC_CRYPTO_DYNAMIC_LOADING"
 !endif
 
 XMLSEC_OPENSSL_CFLAGS   = /D "XMLSEC_CRYPTO_OPENSSL" /D "XMLSEC_DEFAULT_CRYPTO=\"openssl\""
@@ -491,7 +490,7 @@ LDFLAGS = $(LDFLAGS) /WX
 !endif
 
 SOLIBS 			= $(LIBS) libxml2.lib bcrypt.lib ws2_32.lib
-ALIBS           = $(LIBS) libxml2_a.lib bcrypt.lib ws2_32.lib
+ALIBS           = $(LIBS) libxml2s.lib bcrypt.lib ws2_32.lib
 
 !if "$(WITH_ICONV)" == "1"
 CFLAGS          = $(CFLAGS) /D "LIBXML_ICONV_ENABLED"
@@ -501,13 +500,7 @@ ALIBS 			= $(ALIBS) iconv_a.lib
 
 !if "$(WITH_LIBXSLT)" == "1"
 SOLIBS 			= $(SOLIBS) libxslt.lib
-ALIBS 			= $(ALIBS) libxslt_a.lib
-!endif
-
-!if "$(WITH_DL)" == "1"
-APP_LIBS  		= $(SOLIBS) $(XMLSEC_CRYPTO_SOLIBS)
-!else
-APP_LIBS  		= $(ALIBS) $(XMLSEC_CRYPTO_ALIBS)
+ALIBS 			= $(ALIBS) libxslts.lib
 !endif
 
 XMLSEC_OPENSSL_SOLIBS   = libcrypto.lib wsock32.lib kernel32.lib user32.lib gdi32.lib crypt32.lib advapi32.lib ws2_32.lib
@@ -590,39 +583,40 @@ XMLSEC_OPENSSL_TEST_CONFIG =
 !endif
 
 !if "$(STATIC)" == "1"
-EXTRA_ALL_TARGETS=xmlseca
-EXTRA_OPENSSL_TARGETS=openssla
-EXTRA_NSS_TARGETS=nssa
-EXTRA_MSCNG_TARGETS=mscnga
-EXTRA_MSCRYPTO_TARGETS=mscryptoa
+APP_LIBS=$(ALIBS) $(XMLSEC_CRYPTO_ALIBS)
+XMLSEC_APP_TARGETS=xmlseca
+XMLSEC_OPENSSL_TARGETS=openssla
+XMLSEC_NSS_TARGETS=nssa
+XMLSEC_MSCNG_TARGETS=mscnga
+XMLSEC_MSCRYPTO_TARGETS=mscryptoa
 !else
-EXTRA_ALL_TARGETS=
-EXTRA_OPENSSL_TARGETS=
-EXTRA_NSS_TARGETS=
-EXTRA_MSCNG_TARGETS=
-EXTRA_MSCRYPTO_TARGETS=
+APP_LIBS=$(SOLIBS) $(XMLSEC_CRYPTO_SOLIBS)
+XMLSEC_APP_TARGETS=xmlsec
+XMLSEC_OPENSSL_TARGETS=openssl
+XMLSEC_NSS_TARGETS=nss
+XMLSEC_MSCNG_TARGETS=mscng
+XMLSEC_MSCRYPTO_TARGETS=mscrypto
 !endif
-
 
 EXTRA_CRYPTO_TARGETS =
 !if "$(WITH_OPENSSL)" == "1"
-EXTRA_CRYPTO_TARGETS = $(EXTRA_CRYPTO_TARGETS) openssl $(EXTRA_OPENSSL_TARGETS)
+EXTRA_CRYPTO_TARGETS = $(EXTRA_CRYPTO_TARGETS) $(XMLSEC_OPENSSL_TARGETS)
 !endif
 !if "$(WITH_NSS)" == "1"
-EXTRA_CRYPTO_TARGETS = $(EXTRA_CRYPTO_TARGETS) nss $(EXTRA_NSS_TARGETS)
+EXTRA_CRYPTO_TARGETS = $(EXTRA_CRYPTO_TARGETS) $(XMLSEC_NSS_TARGETS)
 !endif
 !if "$(WITH_MSCNG)" == "1"
-EXTRA_CRYPTO_TARGETS = $(EXTRA_CRYPTO_TARGETS) mscng $(EXTRA_MSCNG_TARGETS)
+EXTRA_CRYPTO_TARGETS = $(EXTRA_CRYPTO_TARGETS) $(XMLSEC_MSCNG_TARGETS)
 !endif
 !if "$(WITH_MSCRYPTO)" == "1"
-EXTRA_CRYPTO_TARGETS = $(EXTRA_CRYPTO_TARGETS) mscrypto $(EXTRA_MSCRYPTO_TARGETS)
+EXTRA_CRYPTO_TARGETS = $(EXTRA_CRYPTO_TARGETS) $(XMLSEC_MSCRYPTO_TARGETS)
 !endif
 
 #
 # Build rules
 #
 
-all: apps $(EXTRA_ALL_TARGETS) $(EXTRA_CRYPTO_TARGETS)
+all: apps $(XMLSEC_APP_TARGETS) $(EXTRA_CRYPTO_TARGETS)
 
 apps: $(BINDIR)\$(APP_NAME)
 
@@ -630,16 +624,16 @@ xmlseca:  $(XMLSEC_APPS_INTDIR_A) $(BINDIR)\$(XMLSEC_A) $(XMLSEC_DEFAULT_CRYPTO_
 xmlsec: $(XMLSEC_APPS_INTDIR) $(BINDIR)\$(XMLSEC_SO) $(XMLSEC_DEFAULT_CRYPTO)
 
 openssla: $(BINDIR)\$(XMLSEC_OPENSSL_A)
-openssl: $(BINDIR)\$(XMLSEC_OPENSSL_SO) $(EXTRA_OPENSSL_TARGETS)
+openssl: $(BINDIR)\$(XMLSEC_OPENSSL_SO)
 
 nssa: $(BINDIR)\$(XMLSEC_NSS_A)
-nss: $(BINDIR)\$(XMLSEC_NSS_SO) $(EXTRA_NSS_TARGETS)
+nss: $(BINDIR)\$(XMLSEC_NSS_SO) $(XMLSEC_NSS_TARGETS)
 
 mscryptoa: $(BINDIR)\$(XMLSEC_MSCRYPTO_A)
-mscrypto: $(BINDIR)\$(XMLSEC_MSCRYPTO_SO) $(EXTRA_MSCRYPTO_TARGETS)
+mscrypto: $(BINDIR)\$(XMLSEC_MSCRYPTO_SO)
 
 mscnga: $(BINDIR)\$(XMLSEC_MSCNG_A)
-mscng: $(BINDIR)\$(XMLSEC_MSCNG_SO) $(EXTRA_MSCNG_TARGETS)
+mscng: $(BINDIR)\$(XMLSEC_MSCNG_SO)
 
 check : check-keys check-dsig check-enc
 
