--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -205,7 +205,8 @@ jobs:
     env:
       VISUAL_STUDIO_ROOT: "C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise"
       INSTALL_FOLDER: c:\install.dir
-      LIBS_VERSION: 1.3.8
+      # this should be 1.3.8 but there is problem with build so we will fix it a bit later
+      LIBS_VERSION: 1.3.7
     steps:
     - name: create-dirs
       run: |
