--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -60,11 +60,13 @@ AUTOCONF = .\configure.txt
 # Names of various input and output components.
 #
 !if "$(STATIC)" == "1"
-APP_NAME 		= xmlseca.exe
+APP_NAME = xmlseca.exe
+UNIT_TESTS_APP_NAME = xmlsec_unit_testsa.exe
 !else
-APP_NAME 		= xmlsec.exe
+APP_NAME = xmlsec.exe
+UNIT_TESTS_APP_NAME = xmlsec_unit_tests.exe
 !endif
-APP_NAME_MANIFEST	= $(APP_NAME).manifest
+APP_NAME_MANIFEST = $(APP_NAME).manifest
 
 XMLSEC_NAME 		= xmlsec
 XMLSEC_BASENAME 	= lib$(XMLSEC_NAME)
@@ -147,6 +149,11 @@ XMLSEC_APPS_OBJS_A = \
 	$(XMLSEC_APPS_INTDIR_A)\cmdline.obj\
 	$(XMLSEC_APPS_INTDIR_A)\xmlsec.obj
 
+XMLSEC_UNIT_TESTS_OBJS = \
+	$(XMLSEC_APPS_INTDIR)\xmlsec_unit_tests.obj
+XMLSEC_UNIT_TESTS_OBJS_A = \
+	$(XMLSEC_APPS_INTDIR_A)\xmlsec_unit_tests.obj
+
 XMLSEC_OBJS = \
 	$(XMLSEC_INTDIR)\app.obj\
 	$(XMLSEC_INTDIR)\base64.obj\
@@ -175,7 +182,8 @@ XMLSEC_OBJS = \
 	$(XMLSEC_INTDIR)\xmlsec.obj \
 	$(XMLSEC_INTDIR)\xmltree.obj \
 	$(XMLSEC_INTDIR)\xpath.obj \
-	$(XMLSEC_INTDIR)\xslt.obj
+	$(XMLSEC_INTDIR)\xslt.obj \
+	$(XMLSEC_INTDIR)\x509.obj
 XMLSEC_OBJS_A = \
 	$(XMLSEC_INTDIR_A)\app.obj\
 	$(XMLSEC_INTDIR_A)\base64.obj\
@@ -204,7 +212,8 @@ XMLSEC_OBJS_A = \
 	$(XMLSEC_INTDIR_A)\xmlsec.obj \
 	$(XMLSEC_INTDIR_A)\xmltree.obj \
 	$(XMLSEC_INTDIR_A)\xpath.obj \
-	$(XMLSEC_INTDIR_A)\xslt.obj
+	$(XMLSEC_INTDIR_A)\xslt.obj \
+	$(XMLSEC_INTDIR_A)\x509.obj
 
 XMLSEC_OPENSSL_OBJS = \
 	$(XMLSEC_OPENSSL_INTDIR)\app.obj\
@@ -618,10 +627,10 @@ EXTRA_CRYPTO_TARGETS = $(EXTRA_CRYPTO_TARGETS) $(XMLSEC_MSCRYPTO_TARGETS)
 
 all: apps $(XMLSEC_APP_TARGETS) $(EXTRA_CRYPTO_TARGETS)
 
-apps: $(BINDIR)\$(APP_NAME)
+apps: $(BINDIR)\$(APP_NAME) $(BINDIR)\$(UNIT_TESTS_APP_NAME)
 
-xmlseca:  $(XMLSEC_APPS_INTDIR_A) $(BINDIR)\$(XMLSEC_A) $(XMLSEC_DEFAULT_CRYPTO_A)
-xmlsec: $(XMLSEC_APPS_INTDIR) $(BINDIR)\$(XMLSEC_SO) $(XMLSEC_DEFAULT_CRYPTO)
+xmlseca: $(BINDIR)\$(XMLSEC_A) $(XMLSEC_DEFAULT_CRYPTO_A)
+xmlsec: $(BINDIR)\$(XMLSEC_SO) $(XMLSEC_DEFAULT_CRYPTO)
 
 openssla: $(BINDIR)\$(XMLSEC_OPENSSL_A)
 openssl: $(BINDIR)\$(XMLSEC_OPENSSL_SO)
@@ -635,7 +644,12 @@ mscrypto: $(BINDIR)\$(XMLSEC_MSCRYPTO_SO)
 mscnga: $(BINDIR)\$(XMLSEC_MSCNG_A)
 mscng: $(BINDIR)\$(XMLSEC_MSCNG_SO)
 
-check : check-keys check-dsig check-enc
+check : check-unit-tests check-keys check-dsig check-enc
+
+check-unit-tests : $(BINDIR)\$(UNIT_TESTS_APP_NAME)
+	cd ..
+	win32\$(BINDIR)\$(UNIT_TESTS_APP_NAME)
+	cd win32
 
 check-keys : $(BINDIR)\$(APP_NAME)
 	cd ..
@@ -930,11 +944,15 @@ $(BINDIR)\$(XMLSEC_MSCNG_A) : $(BINDIR) $(BINDIR)\$(XMLSEC_A) $(XMLSEC_MSCNG_OBJ
 #
 # An implicit rule for xmlsec command line tool
 #
-$(BINDIR)\xmlseca.exe: xmlseca $(BINDIR) $(XMLSEC_APPS_OBJS_A)
+$(BINDIR)\xmlseca.exe: xmlseca $(XMLSEC_APPS_INTDIR_A) $(BINDIR) $(XMLSEC_APPS_OBJS_A)
 	$(LD) $(LDFLAGS) /OUT:$@ $(XMLSEC_A) $(XMLSEC_CRYPTO_A) $(APP_LIBS) $(XMLSEC_APPS_OBJS_A)
-$(BINDIR)\xmlsec.exe: xmlsec $(BINDIR) $(XMLSEC_APPS_OBJS)
+$(BINDIR)\xmlsec.exe: xmlsec $(XMLSEC_APPS_INTDIR) $(BINDIR) $(XMLSEC_APPS_OBJS)
 	$(LD) $(LDFLAGS) /OUT:$@ $(XMLSEC_IMP) $(XMLSEC_CRYPTO_IMP) $(APP_LIBS) $(XMLSEC_APPS_OBJS)
 
+$(BINDIR)\xmlsec_unit_testsa.exe: xmlseca $(XMLSEC_APPS_INTDIR_A) $(BINDIR) $(XMLSEC_UNIT_TESTS_OBJS_A)
+	$(LD) $(LDFLAGS) /OUT:$@ $(XMLSEC_A) $(XMLSEC_CRYPTO_A) $(APP_LIBS) $(XMLSEC_UNIT_TESTS_OBJS_A)
+$(BINDIR)\xmlsec_unit_tests.exe: xmlsec $(XMLSEC_APPS_INTDIR) $(BINDIR) $(XMLSEC_UNIT_TESTS_OBJS)
+	$(LD) $(LDFLAGS) /OUT:$@ $(XMLSEC_IMP) $(XMLSEC_CRYPTO_IMP) $(APP_LIBS) $(XMLSEC_UNIT_TESTS_OBJS)
 
 # This is a target for me, to make a binary distribution. Not for the public use,
 # keep your hands off :-)
