--- a/apps/Makefile.am
+++ b/apps/Makefile.am
@@ -83,7 +83,8 @@ xmlsec1_DEPENDENCIES = \
 
 # xmlsec unit tests
 xmlsec_unit_tests_SOURCES = \
-	xmlsec_unit_tests.c \
+	unit_tests/x509_unit_tests.c \
+	unit_tests/xmlsec_unit_tests.c \
 	$(NULL)
 
 
