Add base64 tests

--- a/apps/Makefile.am
+++ b/apps/Makefile.am
@@ -83,7 +83,9 @@ xmlsec1_DEPENDENCIES = \
 
 # xmlsec unit tests
 xmlsec_unit_tests_SOURCES = \
+	unit_tests/base64_unit_tests.c \
 	unit_tests/x509_unit_tests.c \
+	unit_tests/xmlsec_unit_tests.h \
 	unit_tests/xmlsec_unit_tests.c \
 	$(NULL)
 
