--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -150,9 +150,11 @@ XMLSEC_APPS_OBJS_A = \
 	$(XMLSEC_APPS_INTDIR_A)\xmlsec.obj
 
 XMLSEC_UNIT_TESTS_OBJS = \
+	$(XMLSEC_APPS_INTDIR)\unit_tests\base64_unit_tests.obj \
 	$(XMLSEC_APPS_INTDIR)\unit_tests\x509_unit_tests.obj \
 	$(XMLSEC_APPS_INTDIR)\unit_tests\xmlsec_unit_tests.obj
 XMLSEC_UNIT_TESTS_OBJS_A = \
+	$(XMLSEC_APPS_INTDIR_A)\unit_tests\base64_unit_tests.obj \
 	$(XMLSEC_APPS_INTDIR_A)\unit_tests\x509_unit_tests.obj \
 	$(XMLSEC_APPS_INTDIR_A)\unit_tests\xmlsec_unit_tests.obj
 
@@ -860,7 +862,7 @@ $(XMLSEC_MSCNG_INTDIR_A) :
 {$(APPS_SRCDIR)}.c{$(XMLSEC_APPS_INTDIR_A)}.obj::
 	$(CC) /D "LIBXML_STATIC" /D "LIBXSLT_STATIC" /D "XMLSEC_STATIC" \
 		$(CFLAGS) $(APP_CFLAGS) /Fo$(XMLSEC_APPS_INTDIR_A)\ /c $<
-{$(APPS_SRCDIR)\unit_tests}.c{$(XMLSEC_APPS_INTDIR_A)\unit_tests}.obj:: 
+{$(APPS_SRCDIR)\unit_tests}.c{$(XMLSEC_APPS_INTDIR_A)\unit_tests}.obj::
 	$(CC) /D "LIBXML_STATIC" /D "LIBXSLT_STATIC" /D "XMLSEC_STATIC" \
 		$(CFLAGS) $(APP_CFLAGS) /Fo$(XMLSEC_APPS_INTDIR_A)\unit_tests\ /c $<
 
