--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -73,12 +73,13 @@ jobs:
           sudo apt install automake autoconf libtool libtool-bin libltdl-dev libltdl7
           sudo apt install libxml2 libxml2-dev libxslt1.1 libxslt1-dev
     - name: build aws lc
-      working-directory: ../aws-lc
+      working-directory:
       run: |
+          mkdir ../aws-lc && cd ../aws-lc
           wget "https://github.com/aws/aws-lc/archive/refs/tags/v{{ env.AWS_LC_VERSION }}.zip"
           unzip "v{{ env.AWS_LC_VERSION }}.zip"
-          mkdir aws-lc-build && cd aws-lc-build
-          cmake -GNinja -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_INSTALL_PREFIX=../aws-lc-install ../aws-lc-{{ env.AWS_LC_VERSION }}
+          mkdir build && cd build
+          cmake -GNinja -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/../aws-lc/install ../aws-lc-{{ env.AWS_LC_VERSION }}
           ninja install
     - uses: actions/checkout@v2
     - name: create-build-dirs
@@ -89,7 +90,7 @@ jobs:
       run: |
           ../autogen.sh --prefix=${GITHUB_WORKSPACE}/install.dir ${{ matrix.config_flags }} \
             --enable-werror --enable-pedantic \
-            --with-openssl=../../aws-lc/aws-lc-install \
+            --with-openssl=${GITHUB_WORKSPACE}/../aws-lc/install \
             --without-gnutls --without-nss --without-gcrypt
     - name: make
       working-directory: build.dir
