--- a/tests/openssl3.cnf
+++ b/tests/openssl3.cnf
@@ -25,11 +25,11 @@ activate = 1
 
 # List of engines to load
 [engine_section]
-gost = gost_section
+# gost = gost_section
 
 [gost_section]
 engine_id = gost
-dynamic_path = /home/aleksey/local/openssl-3.4.3/lib64/engines-3/gost.so
+dynamic_path = path to gost.so
 # default_algorithms = ALL
 init = 1
 
